# tag-deserializer

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs  main.rs
src/animal_tag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/animal_tag/serializer/: buffer_generator.py  deserializer.py  utils.py
tests/: README.md  header1.json  minify_header1.json  pyproject.toml  test_creation.py
tests/src/animal_tag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/src/animal_tag/deserialization/: deserializer.py
tests/src/animal_tag/serialization/: buffer_generator.py
tests/src/animal_tag/serializer/: buffer_generator.py  deserializer.py  utils.py
tests/src/serialization/: generate_test_file.py
tests/tests/: test_creation.py  test_deserialization.py  test_popping.py
tests/tests/Data/: test_header.txt
