[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "animal_tag"
version = "0.1.0"
authors = [
	{ name = "Gabriel Antoniak", email = "gjantoniak@gmail.com" },
]
description = "Serialization/Deserialization for animal tags"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
	"Programming language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: Linux",
]
dependencies = [
	"numpy",
	"scipy",
	"pyserial",
	"matplotlib",
	"h5py",
	"rawutil",
	"tqdm",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"

log_file = "tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
